<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.krisha.lostandfound.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient3"
    android:gravity="center_horizontal">


        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edittext_login"
                android:layout_width="249dp"
                android:layout_height="84dp"
                android:layout_marginTop="108dp"
                android:text="REGISTER"
                android:textColor="@android:color/white"
                android:textSize="55sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="181dp"
            android:layout_height="47dp"
            android:layout_marginTop="160dp"
            android:background="#11f8fafd"
            android:drawableLeft="@drawable/ic_action_name"
            android:hint="@string/username"
            android:textColor="@android:color/white"
            android:textColorHint="#fcfbfb" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="178dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="#11f8fafd"
            android:drawableLeft="@drawable/ic_action_password"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="#fcfbfb" />

        <EditText
            android:id="@+id/edittext_cnf_password"
            android:layout_width="183dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:background="#11f8fafd"
            android:drawableLeft="@drawable/ic_action_password"
            android:hint="@string/confirm_password"
            android:textColor="@android:color/white"
            android:textColorHint="#fcfbfb" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#04ea00"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/already_registered"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textview_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:text="@string/login"
                android:textColor="#04ea00"
                android:textSize="16sp" />

        </LinearLayout>


</LinearLayout>